build.gradle auto SF

--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -47,7 +47,7 @@ bundle.symbolic.name[@liferay/portal-workflow-instance-tracker-web]=com.liferay.
 bundle.symbolic.name[@liferay/portal-workflow-taglib]=com.liferay.portal.workflow.taglib
 bundle.symbolic.name[@liferay/remote-app-web]=com.liferay.remote.app.web
 bundle.symbolic.name[@liferay/search-experiences-web]=com.liferay.search.experiences.web
-bundle.symbolic.name[@liferay/site-initializer-raylife]=com.liferay.site.initializer.raylife
+bundle.symbolic.name[@liferay/site-initializer-raylife-d2c]=com.liferay.site.initializer.raylife.d2c
 bundle.symbolic.name[@liferay/site-navigation-menu-item-display-page]=com.liferay.site.navigation.menu.item.display.page
 bundle.symbolic.name[@liferay/template-web]=com.liferay.template.web
 bundle.symbolic.name[account-admin-web]=com.liferay.account.admin.web
@@ -351,7 +351,7 @@ bundle.version[com.liferay.asset.list.item.selector.web]=2.0.14
 bundle.version[com.liferay.asset.list.service]=3.0.27
 bundle.version[com.liferay.asset.list.test]=1.0.0
 bundle.version[com.liferay.asset.list.web]=3.0.34
-bundle.version[com.liferay.asset.publisher.api]=4.0.6
+bundle.version[com.liferay.asset.publisher.api]=4.1.0
 bundle.version[com.liferay.asset.publisher.layout.prototype]=5.0.13
 bundle.version[com.liferay.asset.publisher.test]=1.0.0
 bundle.version[com.liferay.asset.publisher.web]=5.0.51
@@ -368,10 +368,11 @@ bundle.version[com.liferay.asset.tags.validator]=5.0.6
 bundle.version[com.liferay.asset.test.util]=5.0.4
 bundle.version[com.liferay.asset.test]=1.0.0
 bundle.version[com.liferay.asset.web]=6.0.10
-bundle.version[com.liferay.batch.engine.api]=15.1.1
+bundle.version[com.liferay.batch.engine.api]=15.2.0
 bundle.version[com.liferay.batch.engine.service]=4.0.28
 bundle.version[com.liferay.batch.engine.test]=1.0.0
-bundle.version[com.liferay.batch.planner.api]=7.1.1
+bundle.version[com.liferay.batch.engine.web]=1.0.0
+bundle.version[com.liferay.batch.planner.api]=8.0.0
 bundle.version[com.liferay.batch.planner.rest.api]=2.2.1
 bundle.version[com.liferay.batch.planner.rest.client]=1.0.10
 bundle.version[com.liferay.batch.planner.rest.impl]=1.0.11
@@ -466,7 +467,7 @@ bundle.version[com.liferay.commerce.account.test]=1.0.0
 bundle.version[com.liferay.commerce.account.web]=4.0.14
 bundle.version[com.liferay.commerce.address.content.web]=4.0.18
 bundle.version[com.liferay.commerce.address.web]=4.0.19
-bundle.version[com.liferay.commerce.api]=36.2.1
+bundle.version[com.liferay.commerce.api]=37.0.0
 bundle.version[com.liferay.commerce.application.list]=6.0.8
 bundle.version[com.liferay.commerce.availability.estimate.web]=4.0.14
 bundle.version[com.liferay.commerce.avalara.connector.api]=1.0.0
@@ -532,7 +533,7 @@ bundle.version[com.liferay.commerce.payment.method.authorize.net]=4.0.14
 bundle.version[com.liferay.commerce.payment.method.mercanet]=4.0.14
 bundle.version[com.liferay.commerce.payment.method.money.order]=4.0.11
 bundle.version[com.liferay.commerce.payment.method.paypal]=4.0.12
-bundle.version[com.liferay.commerce.payment.service]=4.0.25
+bundle.version[com.liferay.commerce.payment.service]=4.0.26
 bundle.version[com.liferay.commerce.payment.test.util]=4.0.5
 bundle.version[com.liferay.commerce.payment.test]=1.0.0
 bundle.version[com.liferay.commerce.payment.web]=4.0.20
@@ -590,7 +591,7 @@ bundle.version[com.liferay.commerce.service]=11.0.60
 bundle.version[com.liferay.commerce.shipment.content.web]=4.0.13
 bundle.version[com.liferay.commerce.shipment.web]=4.0.19
 bundle.version[com.liferay.commerce.shipping.engine.fedex]=5.0.15
-bundle.version[com.liferay.commerce.shipping.engine.fixed.api]=10.1.1
+bundle.version[com.liferay.commerce.shipping.engine.fixed.api]=11.0.0
 bundle.version[com.liferay.commerce.shipping.engine.fixed.service]=4.0.21
 bundle.version[com.liferay.commerce.shipping.engine.fixed.test]=1.0.0
 bundle.version[com.liferay.commerce.shipping.engine.fixed.web]=4.0.21
@@ -953,7 +954,7 @@ bundle.version[com.liferay.headless.admin.taxonomy.api]=8.0.2
 bundle.version[com.liferay.headless.admin.taxonomy.client]=4.0.14
 bundle.version[com.liferay.headless.admin.taxonomy.impl]=5.0.22
 bundle.version[com.liferay.headless.admin.taxonomy.test]=1.0.0
-bundle.version[com.liferay.headless.admin.user.api]=15.10.1
+bundle.version[com.liferay.headless.admin.user.api]=15.11.0
 bundle.version[com.liferay.headless.admin.user.client]=4.0.23
 bundle.version[com.liferay.headless.admin.user.impl]=5.0.38
 bundle.version[com.liferay.headless.admin.user.test]=1.0.0
@@ -988,7 +989,7 @@ bundle.version[com.liferay.headless.commerce.admin.pricing.api]=15.2.4
 bundle.version[com.liferay.headless.commerce.admin.pricing.client]=4.0.13
 bundle.version[com.liferay.headless.commerce.admin.pricing.impl]=4.0.25
 bundle.version[com.liferay.headless.commerce.admin.pricing.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.shipment.api]=1.3.1
+bundle.version[com.liferay.headless.commerce.admin.shipment.api]=1.4.0
 bundle.version[com.liferay.headless.commerce.admin.shipment.client]=1.0.12
 bundle.version[com.liferay.headless.commerce.admin.shipment.impl]=1.0.21
 bundle.version[com.liferay.headless.commerce.admin.shipment.test]=1.0.0
@@ -1013,7 +1014,7 @@ bundle.version[com.liferay.headless.commerce.machine.learning.test]=1.0.0
 bundle.version[com.liferay.headless.commerce.punchout.api]=5.2.4
 bundle.version[com.liferay.headless.commerce.punchout.impl]=4.0.13
 bundle.version[com.liferay.headless.common.spi]=8.0.7
-bundle.version[com.liferay.headless.delivery.api]=35.4.1
+bundle.version[com.liferay.headless.delivery.api]=35.5.0
 bundle.version[com.liferay.headless.delivery.client]=4.0.22
 bundle.version[com.liferay.headless.delivery.impl]=5.0.53
 bundle.version[com.liferay.headless.delivery.test]=1.0.0
@@ -1062,7 +1063,7 @@ bundle.version[com.liferay.item.selector.url.web]=6.0.17
 bundle.version[com.liferay.item.selector.web]=7.0.16
 bundle.version[com.liferay.javadoc.formatter]=1.0.37
 bundle.version[com.liferay.jaxws.osgi.bridge]=5.0.4
-bundle.version[com.liferay.jenkins.results.parser]=1.0.1010
+bundle.version[com.liferay.jenkins.results.parser]=1.0.1015
 bundle.version[com.liferay.journal.api]=10.0.2
 bundle.version[com.liferay.journal.article.dynamic.data.mapping.form.field.type.api]=1.0.6
 bundle.version[com.liferay.journal.article.dynamic.data.mapping.form.field.type]=2.0.18
@@ -1106,7 +1107,7 @@ bundle.version[com.liferay.lang.builder]=1.0.47
 bundle.version[com.liferay.layout.admin.api]=4.0.5
 bundle.version[com.liferay.layout.admin.web.test]=1.0.0
 bundle.version[com.liferay.layout.admin.web]=5.0.63
-bundle.version[com.liferay.layout.api]=12.1.1
+bundle.version[com.liferay.layout.api]=12.2.0
 bundle.version[com.liferay.layout.content.page.editor.api]=4.0.1
 bundle.version[com.liferay.layout.content.page.editor.impl]=2.0.6
 bundle.version[com.liferay.layout.content.page.editor.web.test]=1.0.0
@@ -1121,7 +1122,7 @@ bundle.version[com.liferay.layout.item.selector.web]=5.0.13
 bundle.version[com.liferay.layout.page.template.admin.api]=2.0.5
 bundle.version[com.liferay.layout.page.template.admin.web.test]=1.0.0
 bundle.version[com.liferay.layout.page.template.admin.web]=2.0.42
-bundle.version[com.liferay.layout.page.template.api]=11.0.1
+bundle.version[com.liferay.layout.page.template.api]=11.1.0
 bundle.version[com.liferay.layout.page.template.item.selector.api]=2.1.2
 bundle.version[com.liferay.layout.page.template.item.selector.web]=1.0.10
 bundle.version[com.liferay.layout.page.template.service]=4.0.31
@@ -1262,7 +1263,7 @@ bundle.version[com.liferay.object.admin.rest.api]=4.7.1
 bundle.version[com.liferay.object.admin.rest.client]=1.0.17
 bundle.version[com.liferay.object.admin.rest.impl]=1.0.25
 bundle.version[com.liferay.object.admin.rest.test]=1.0.0
-bundle.version[com.liferay.object.api]=13.1.1
+bundle.version[com.liferay.object.api]=14.0.0
 bundle.version[com.liferay.object.dynamic.data.mapping.form.field.type.api]=1.0.2
 bundle.version[com.liferay.object.dynamic.data.mapping.form.field.type]=1.0.3
 bundle.version[com.liferay.object.dynamic.data.mapping]=1.0.12
@@ -1319,8 +1320,8 @@ bundle.version[com.liferay.petra.portlet.url.builder]=5.0.3
 bundle.version[com.liferay.petra.process]=5.0.7
 bundle.version[com.liferay.petra.reflect]=5.1.3
 bundle.version[com.liferay.petra.salesforce.client]=5.0.7
-bundle.version[com.liferay.petra.sql.dsl.api]=2.2.3
-bundle.version[com.liferay.petra.sql.dsl.spi]=2.0.7
+bundle.version[com.liferay.petra.sql.dsl.api]=3.0.0
+bundle.version[com.liferay.petra.sql.dsl.spi]=3.0.0
 bundle.version[com.liferay.petra.string]=5.1.1
 bundle.version[com.liferay.petra.test.util]=3.0.3
 bundle.version[com.liferay.petra.url.pattern.mapper]=4.0.5
@@ -1404,7 +1405,7 @@ bundle.version[com.liferay.portal.file.install.impl]=4.0.17
 bundle.version[com.liferay.portal.file.install.test]=1.0.0
 bundle.version[com.liferay.portal.fragment.bundle.watcher.test]=1.0.0
 bundle.version[com.liferay.portal.fragment.bundle.watcher]=4.0.9
-bundle.version[com.liferay.portal.impl]=29.0.0
+bundle.version[com.liferay.portal.impl]=29.0.1
 bundle.version[com.liferay.portal.inactive.request.handler]=4.0.12
 bundle.version[com.liferay.portal.init.servlet.filter]=6.0.8
 bundle.version[com.liferay.portal.instance.lifecycle.api]=4.0.5
@@ -1416,10 +1417,10 @@ bundle.version[com.liferay.portal.jmx.api]=5.0.5
 bundle.version[com.liferay.portal.jmx.test]=1.0.0
 bundle.version[com.liferay.portal.jmx]=8.0.8
 bundle.version[com.liferay.portal.jsp.engine]=1.0.6
-bundle.version[com.liferay.portal.kernel]=41.0.0
+bundle.version[com.liferay.portal.kernel]=41.0.1
 bundle.version[com.liferay.portal.language.extender]=6.0.13
 bundle.version[com.liferay.portal.language.lang]=1.0.79
-bundle.version[com.liferay.portal.language.override.api]=2.0.1
+bundle.version[com.liferay.portal.language.override.api]=2.1.0
 bundle.version[com.liferay.portal.language.override.service]=1.0.6
 bundle.version[com.liferay.portal.language.override.test]=1.0.0
 bundle.version[com.liferay.portal.language.override.web]=1.0.10
@@ -1645,13 +1646,13 @@ bundle.version[com.liferay.portal.tools.db.support]=1.0.9
 bundle.version[com.liferay.portal.tools.db.upgrade.client]=4.0.0
 bundle.version[com.liferay.portal.tools.java.parser]=1.0.47
 bundle.version[com.liferay.portal.tools.portal.compat.bytecode.transformer]=1.0.4
-bundle.version[com.liferay.portal.tools.rest.builder]=1.0.229
+bundle.version[com.liferay.portal.tools.rest.builder]=1.0.230
 bundle.version[com.liferay.portal.tools.sample.sql.builder]=3.0.0
 bundle.version[com.liferay.portal.tools.service.builder.test.api]=1.0.0
 bundle.version[com.liferay.portal.tools.service.builder.test.service]=1.0.0
 bundle.version[com.liferay.portal.tools.service.builder.test.test]=1.0.0
 bundle.version[com.liferay.portal.tools.service.builder.test.uad]=1.0.0
-bundle.version[com.liferay.portal.tools.service.builder]=1.0.415
+bundle.version[com.liferay.portal.tools.service.builder]=1.0.416
 bundle.version[com.liferay.portal.tools.soy.builder]=3.0.5
 bundle.version[com.liferay.portal.tools.theme.builder]=1.1.10
 bundle.version[com.liferay.portal.tools.upgrade.table.builder]=1.0.11
@@ -1667,6 +1668,7 @@ bundle.version[com.liferay.portal.upload]=4.0.12
 bundle.version[com.liferay.portal.url.builder.api]=4.1.5
 bundle.version[com.liferay.portal.url.builder.impl]=4.0.7
 bundle.version[com.liferay.portal.url.rewrite.filter]=1.0.3
+bundle.version[com.liferay.portal.url.validator]=1.0.0
 bundle.version[com.liferay.portal.user.locale.options.web]=2.0.9
 bundle.version[com.liferay.portal.util.test]=1.0.0
 bundle.version[com.liferay.portal.validation.api]=4.0.6
@@ -1741,9 +1743,9 @@ bundle.version[com.liferay.portlet.preferences.test]=1.0.0
 bundle.version[com.liferay.portlet.tck.bridge]=4.0.1
 bundle.version[com.liferay.portlet.test]=1.0.0
 bundle.version[com.liferay.portlet.title.localization.test]=1.0.0
-bundle.version[com.liferay.poshi.core]=1.0.53
+bundle.version[com.liferay.poshi.core]=1.0.54
 bundle.version[com.liferay.poshi.runner.resources]=1.0.12
-bundle.version[com.liferay.poshi.runner]=1.0.338
+bundle.version[com.liferay.poshi.runner]=1.0.339
 bundle.version[com.liferay.post.upgrade.fix.api]=4.0.0
 bundle.version[com.liferay.product.navigation.applications.menu.api]=2.0.8
 bundle.version[com.liferay.product.navigation.applications.menu.web.test]=1.0.0
@@ -1845,7 +1847,7 @@ bundle.version[com.liferay.scr.reference.dynamic.greedy.test.impl]=1.0.0
 bundle.version[com.liferay.scr.reference.dynamic.greedy.test.test]=1.0.0
 bundle.version[com.liferay.screens.api]=7.1.1
 bundle.version[com.liferay.screens.service]=5.0.15
-bundle.version[com.liferay.search.experiences.api]=2.0.1
+bundle.version[com.liferay.search.experiences.api]=3.0.0
 bundle.version[com.liferay.search.experiences.rest.api]=1.0.4
 bundle.version[com.liferay.search.experiences.rest.client]=1.0.5
 bundle.version[com.liferay.search.experiences.rest.impl]=1.0.7
@@ -1882,6 +1884,7 @@ bundle.version[com.liferay.server.admin.web.test]=1.0.0
 bundle.version[com.liferay.server.admin.web]=5.0.30
 bundle.version[com.liferay.service.component.test]=1.0.0
 bundle.version[com.liferay.service.tracker.test]=1.0.0
+bundle.version[com.liferay.shared.dependencies.apache.commons]=1.0.0
 bundle.version[com.liferay.shared.dependencies.netty]=1.0.2
 bundle.version[com.liferay.shared.dependencies.xstream]=1.0.2
 bundle.version[com.liferay.sharepoint.rest.oauth2.api]=6.0.1
@@ -1920,7 +1923,8 @@ bundle.version[com.liferay.site.initializer.extender]=1.0.26
 bundle.version[com.liferay.site.initializer.ichthus]=1.0.0
 bundle.version[com.liferay.site.initializer.kanban]=1.0.3
 bundle.version[com.liferay.site.initializer.masterclass]=1.0.24
-bundle.version[com.liferay.site.initializer.raylife]=1.0.45
+bundle.version[com.liferay.site.initializer.raylife.ap]=1.0.0
+bundle.version[com.liferay.site.initializer.raylife.d2c]=1.0.45
 bundle.version[com.liferay.site.initializer.team.extranet]=1.0.0
 bundle.version[com.liferay.site.initializer.testray]=1.0.0
 bundle.version[com.liferay.site.initializer.welcome]=1.0.0
@@ -2060,7 +2064,7 @@ bundle.version[com.liferay.users.admin.web]=6.0.39
 bundle.version[com.liferay.util.bridges]=9.0.6
 bundle.version[com.liferay.util.java]=17.1.2
 bundle.version[com.liferay.util.slf4j]=6.0.7
-bundle.version[com.liferay.util.taglib]=8.4.6
+bundle.version[com.liferay.util.taglib]=8.4.7
 bundle.version[com.liferay.view.count.api]=3.0.1
 bundle.version[com.liferay.view.count.service]=2.0.12
 bundle.version[com.liferay.view.count.test]=1.0.0
@@ -2264,6 +2268,7 @@ project.name[com.liferay.asset.web]=:apps:asset:asset-web
 project.name[com.liferay.batch.engine.api]=:apps:batch-engine:batch-engine-api
 project.name[com.liferay.batch.engine.service]=:apps:batch-engine:batch-engine-service
 project.name[com.liferay.batch.engine.test]=:apps:batch-engine:batch-engine-test
+project.name[com.liferay.batch.engine.web]=:apps:batch-engine:batch-engine-web
 project.name[com.liferay.batch.planner.api]=:apps:batch-planner:batch-planner-api
 project.name[com.liferay.batch.planner.rest.api]=:apps:batch-planner:batch-planner-rest-api
 project.name[com.liferay.batch.planner.rest.client]=:apps:batch-planner:batch-planner-rest-client
@@ -3557,6 +3562,7 @@ project.name[com.liferay.portal.upload]=:apps:portal:portal-upload
 project.name[com.liferay.portal.url.builder.api]=:apps:portal-url-builder:portal-url-builder-api
 project.name[com.liferay.portal.url.builder.impl]=:apps:portal-url-builder:portal-url-builder-impl
 project.name[com.liferay.portal.url.rewrite.filter]=:apps:portal:portal-url-rewrite-filter
+project.name[com.liferay.portal.url.validator]=:apps:portal:portal-url-validator
 project.name[com.liferay.portal.user.locale.options.web]=:apps:portal:portal-user-locale-options-web
 project.name[com.liferay.portal.util.test]=:apps:portal:portal-util-test
 project.name[com.liferay.portal.validation.api]=:apps:portal-validation:portal-validation-api
@@ -3772,6 +3778,7 @@ project.name[com.liferay.server.admin.web.test]=:apps:server:server-admin-web-te
 project.name[com.liferay.server.admin.web]=:apps:server:server-admin-web
 project.name[com.liferay.service.component.test]=:apps:service-component:service-component-test
 project.name[com.liferay.service.tracker.test]=:test:service-tracker-test
+project.name[com.liferay.shared.dependencies.apache.commons]=:apps:shared-dependencies:shared-dependencies-apache-commons
 project.name[com.liferay.shared.dependencies.netty]=:apps:shared-dependencies:shared-dependencies-netty
 project.name[com.liferay.shared.dependencies.xstream]=:apps:shared-dependencies:shared-dependencies-xstream
 project.name[com.liferay.sharepoint.rest.oauth2.api]=:dxp:apps:sharepoint-rest:sharepoint-rest-oauth2-api
@@ -3810,7 +3817,8 @@ project.name[com.liferay.site.initializer.extender]=:apps:site-initializer:site-
 project.name[com.liferay.site.initializer.ichthus]=:apps:site-initializer:site-initializer-ichthus
 project.name[com.liferay.site.initializer.kanban]=:apps:site-initializer:site-initializer-kanban
 project.name[com.liferay.site.initializer.masterclass]=:apps:site-initializer:site-initializer-masterclass
-project.name[com.liferay.site.initializer.raylife]=:apps:site-initializer:site-initializer-raylife
+project.name[com.liferay.site.initializer.raylife.ap]=:apps:site-initializer:site-initializer-raylife-ap
+project.name[com.liferay.site.initializer.raylife.d2c]=:apps:site-initializer:site-initializer-raylife-d2c
 project.name[com.liferay.site.initializer.team.extranet]=:apps:site-initializer:site-initializer-team-extranet
 project.name[com.liferay.site.initializer.testray]=:apps:site-initializer:site-initializer-testray
 project.name[com.liferay.site.initializer.welcome]=:apps:site-initializer:site-initializer-welcome
